# SQL-Engine

./: CMakeLists.txt  notes.txt  runner.sh  test.csv
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt
include/sql-engine/: allocator.h  engine.h  parser.h  reader.h  tokenizer.h  writer.h
source/: allocator.cpp  engine.cpp  parser.cpp  reader.cpp  tokenizer.cpp  writer.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
